--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,28 +1,30 @@
 * {
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
-    overflow-y: hidden;
-  }
-  body {
-    background-image: url(./img/cinema.jpg);
-    background-size: cover;
-    min-height: 100vh;
-    background-attachment: fixed;
-    display: flex;
-    justify-content: center;
-  }
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+body {
+  background-image: url(./img/cinema.jpg);
+  background-size: cover;
+  min-height: 100vh;
+  background-attachment: fixed;
+  display: flex;
+  justify-content: center;
+}
 
-  h1 {
-      color: whitesmoke;
-      text-align: center;
-  }
+h1 {
+  color: whitesmoke;
+  text-align: center;
+}
 
 .btn {
-    margin: 5px 10px;
+  margin: 5px 10px;
 }
 
 .searchBar {
-    width: 600px;
-    
+  width: 600px;
+}
+.nav {
+  justify-content: center;
 }
