--- a/assets/styles.css
+++ b/assets/styles.css
@@ -39,7 +39,6 @@ body {
   justify-content: center;
   width: 50%;
   margin: 6px auto;
-
 }
 
 .baner {
@@ -73,11 +72,12 @@ body {
   justify-content: start;
   width: 15%;
   margin: 10px;
-  background-color: rgb(125, 143, 176);
+  background-color: rgba(125, 143, 176, 0.8);
   position: relative;
   height: 70vh;
   border-radius: 15px;
   border: 2mm ridge rgba(13, 110, 253, 0.6);
+  z-index: 1;
 }
 
 .cardContainer {
