--- a/assets/styles.css
+++ b/assets/styles.css
@@ -10,7 +10,7 @@
   overflow-y: hidden;
 }
 body {
-  background-image: url(./img/cinema.jpg);
+  background-image: url(./img/cinema2.jpg);
   background-size: cover;
   min-height: 100vh;
   background-attachment: fixed;
@@ -89,7 +89,6 @@ body {
 .cardPoster {
   width: 100%;
   object-fit: cover;
-  min-height: 100%;
 }
 
 .cardOverview {
