--- a/assets/styles.css
+++ b/assets/styles.css
@@ -76,6 +76,7 @@ body {
   position: relative;
   height: 70vh;
   border-radius: 15px;
+  /* border: 2mm ridge rgba(45, 49, 54, 0.6); */
   border: 2mm ridge rgba(13, 110, 253, 0.6);
   z-index: 1;
 }
